Filter out non-existing org-projectile todo files from agenda

--- a/init.org
+++ b/init.org
@@ -871,7 +871,7 @@ For todos in projects managed by projectile.
   (org-projectile-per-project)
   :config
   (setq org-projectile-per-project-filepath "todos.org")
-  (setq org-agenda-files (append org-agenda-files (org-projectile-todo-files))))
+	(setq org-agenda-files (seq-filter 'file-readable-p (delete-dups (append org-agenda-files (org-projectile-todo-files))))))
 #+end_src
 ** Magit
 The git supercharge
